# plug-and-trust-seteec

./: CMakeLists.txt  SCR.txt  git_commit_info.txt  version_info.txt
ext/: CMakeLists.txt  amazon-freertos.cmake  paho.cmake
ext/openssl/include/openssl/: opensslconf.h
ext/openssl/lib/: libssl.lib  readme.txt
ext/unity/: CMakeLists.txt  unity.h  unity_fixture.h
hostlib/: CMakeLists.txt  version_info.txt
hostlib/hostLib/: CMakeLists.txt
hostlib/hostLib/a71ch/: CMakeLists.txt
hostlib/hostLib/a71ch/app/: CMakeLists.txt  configCli.c  configCli.h  configCliApdu.c  configCliConnect.c  configCliDebug.c  configCliEcrt.c  configCliErase.c  configCliGen.c  configCliGet.c  configCliInfo.c  configCliInteractive.c  configCliInteractive_ln.c  configCliLock.c  configCliObj.c  configCliRcrt.c  configCliRefpem.c  configCliScp.c  configCliScript.c  configCliSet.c  configCliTransport.c  configCliWcrt.c  configCmd.h  configCmdApdu.c  configCmdConnect.c  configCmdDebug.c  configCmdEcrt.c  configCmdErase.c  configCmdGen.c  configCmdGet.c  configCmdInfo.c  configCmdLock.c  configCmdObj.c  configCmdRcrt.c  configCmdRefpem.c  configCmdScp.c  configCmdSet.c  configCmdTransport.c  configCmdWcrt.c  configState.c  (+1 more)
hostlib/hostLib/a71ch/ex/: CMakeLists.txt  a71ch_ex.h  ex_aes.c  ex_boot.c  ex_config.c  ex_debug.c  ex_ecc_nohc.c  ex_gpstorage.c  ex_misc.c  ex_psk.c  ex_scp.c  ex_sst.c  ex_sst_kp.c  ex_walkthrough.c  mainA71CH.c
hostlib/hostLib/a71ch/ex_hlse/: CMakeLists.txt  a71ch_ex_hlse.h  ex_hlse_aes.c  ex_hlse_boot.c  ex_hlse_cert.c  ex_hlse_config.c  ex_hlse_debug.c  ex_hlse_ecc_nohc.c  ex_hlse_gpstorage.c  ex_hlse_misc.c  ex_hlse_psk.c  ex_hlse_scp.c  ex_hlse_sst.c  ex_hlse_sst_kp.c  ex_hlse_walkthrough.c  mainA71CH_hlse.c
hostlib/hostLib/accessManager/: CMakeLists.txt
hostlib/hostLib/accessManager/doc/: accessManager.rst
hostlib/hostLib/accessManager/inc/: accessManager_com.h
hostlib/hostLib/accessManager/src/: accessManager.c  accessManager_com.c  accessManager_rjct.c  accessManager_utils.c
hostlib/hostLib/ccid/ksdk/: CMakeLists.txt  se05x_ccid.c
hostlib/hostLib/embSeEngine/: CMakeLists.txt
hostlib/hostLib/embSeEngine/inc/: ax_embSeEngine.h  ax_embSeEngine_Internal.h
hostlib/hostLib/libCommon/: CMakeLists.txt
hostlib/hostLib/libCommon/hostCrypto/: HostCryptoAPIOpenSSL.c
hostlib/hostLib/libCommon/infra/: sm_app_boot.c  sm_connect.c  sm_demo_utils.c
hostlib/hostLib/libCommon/log/: CMakeLists.txt
hostlib/hostLib/libCommon/smCom/: smCom.c  smComJRCP.c  smComPCSC.h  smComPN7150.c  smComPN7150.h  smComSerial_win32.c  smComSocket_fd.c  smComSocket_linux.c  smComSocket_win32.c
hostlib/hostLib/platform/linux/: i2c_a7.c
hostlib/hostLib/rjct/: CMakeLists.txt
hostlib/hostLib/rjct/inc/: rjct.h
hostlib/hostLib/rjct/src/: mainRjct.c  rjct.c  rjct_com.c
hostlib/hostLib/se05x/: CMakeLists.txt
hostlib/hostLib/se05x/src/: se05x_tlv.c
hostlib/hostLib/tstUtil/: tst_sm_time.c
hostlib/hostLib/vcom/ksdk/: CMakeLists.txt  virtual_com.c
hostlib/useCase/: CMakeLists.txt
scripts/: android.cmake  (+27 more)
semslite/: CMakeLists.txt  version_info.txt
semslite/doc/: demo_update.rst  index.rst  modules.h  sems_lite_api.rst  sems_lite_known_issue.rst  sems_lite_mgmt_api.rst  sems_lite_overview.rst  sems_lite_package.rst  sems_lite_process.rst  sems_lite_usage.rst
semslite/ex/: CMakeLists.txt
semslite/ex/sems_lite_cli_app/: CMakeLists.txt  mfa_process.c  mfa_process_tst.c  mfa_utls.c  nxp_mfa_utils.c  readme.rst
semslite/ex/sems_lite_ex_update/: SEMS_Lite_UpgradeTo_iotDev-7_3_0_A8FA.h  SEMS_Lite_UpgradeTo_iotDev-7_3_0_SIM.h  readme.rst  sems_lite_ex_data.c  sems_lite_ex_update.c
semslite/lib/inc/: sems_lite_agent_common.h  sems_lite_agent_context.h  sems_lite_api.h  sems_lite_api_ver.h
semslite/lib/src/: sems_lite_agent.c  sems_lite_agent_handle.c  sems_lite_api.c  sems_lite_keystore_se05x.c  sems_lite_mgmt_api.c
semslite/tools/sems-lite-generator/: generate.py  requirements.txt  semslite_json_converter.py
semslite/tools/sems-lite-generator/config/: ExampleConfig.json
semslite/tools/sems-lite-generator/schema/: MulticastPackage.jsonschema
semslite/tools/sems-lite-generator/sems_lite_utils/: cgtParser.py  convert.py  jsonToBerTlv.py  jsonToHeader.py  sems_lite_agent_version.py  setup.py
sss/: CMakeLists.txt  version_info.txt
sss/doc/: apis-sss_all_types.rst  apis-sss_key-format.rst  apis-sss_se05x_all_types.rst
sss/ex/: CMakeLists.txt
sss/ex/attest_ecc/: CMakeLists.txt  ex_sss_ecc_attest.c
sss/ex/attest_mont/: CMakeLists.txt  ex_sss_mont_attest.c
sss/ex/doc/: sss-api-examples.rst
sss/ex/ecc/: CMakeLists.txt
sss/ex/ecdh/: CMakeLists.txt  ex_sss_ecdh.c
sss/ex/eddsa/: CMakeLists.txt  ex_sss_eddsa.c  out_ex_eddsa.rst.txt
sss/ex/hkdf/: CMakeLists.txt  ex_sss_hkdf.c
sss/ex/hmac/: CMakeLists.txt  ex_sss_hmac.c
sss/ex/mbedtls/: CMakeLists.txt  ex_sss_dtls.c  ex_sss_ssl2.c
sss/ex/md/: CMakeLists.txt  ex_sss_md.c
sss/ex/rsa/: CMakeLists.txt  ex_sss_rsa.c
sss/ex/src/: CMakeLists.txt  ex_a71ch_scp03.c  ex_sss_boot_direct.c
sss/ex/symmetric/: CMakeLists.txt  ex_sss_symmetric.c
sss/inc/: fsl_sss_ftr.h.in  fsl_sss_ftr_default.h  fsl_sss_sscp_apis.hpp
sss/plugin/mbedtls/scripts/: create_and_provision_ecc_keys.py  create_and_provision_rsa_keys.py  readme.rst
sss/plugin/open62541/: sss_interface.c
sss/plugin/openssl/: CMakeLists.txt
sss/plugin/openssl/scripts/: openssl_provisionEC.py  openssl_provisionEC_mont.py  openssl_provisionRSA.py  readme.rst  test_ecc_parallel.sh
sss/plugin/pkcs11/: sss_pkcs11_pal.h  sss_pkcs11_pal_asymm.c  sss_pkcs11_pal_object.c
sss/plugin/psa/: CMakeLists.txt
sss/plugin/psa/src/: psa_alt_flash.c  psa_alt_utils.c
sss/scripts/: ex_sss_tp_scp03_keys.py  sss_ksdk_mbedtls_config.py  sss_mbedtls_config_common.py  sss_x86_mbedtls_config.py
sss/src/a71cl/: fsl_sscp_a71cl.c
sss/src/dll/: sssapisdll_se05x.def  sssapisdll_se05x_06_08.def
sss/src/keystore/: keystore_cmn.c  keystore_openssl.c  keystore_pc.c
sss/src/openssl/: fsl_sss_openssl_apis.c
sss/src/se05x/: fsl_sss_se05x_apis.c  fsl_sss_se05x_policy.c
(+24 files in other folders)
